feat: Add `me` backlink to header

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,6 +13,8 @@
       {{ end }}
     </title>
 
+    <link rel="me" value="{{ .Site.Data.person.mastodon }}" />
+
     <link rel="icon" href="{{ .Site.Data.person.img }}" />
 
     <meta name="author" content="{{ .Site.Params.Meta.Author }}" />
