feat: Add disclaimer on remaining Twitter links, move to mastodon and start sunsetting Twitter infrastructure

--- a/layouts/partials/contactmenu.html
+++ b/layouts/partials/contactmenu.html
@@ -23,10 +23,10 @@
     <li>
       <a
         class="pf-c-dropdown__menu-item"
-        href="{{ .Mastodon }}"
+        href="https://twitter.com/{{ .Twitter }}"
         target="_blank"
-        rel="me noopener"
-        >Mastodon</a
+        rel="noopener"
+        >Twitter</a
       >
     </li>
 
