--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -18,8 +18,35 @@
     </a>
   </div>
   <div class="pf-c-card__body twitterfeed">
+    <div
+      class="pf-c-alert pf-m-info pf-m-inline"
+      aria-label="Information alert"
+    >
+      <div class="pf-c-alert__icon">
+        <i class="fas fa-fw fa-info-circle" aria-hidden="true"></i>
+      </div>
+      <p class="pf-c-alert__title">
+        <span class="pf-screen-reader">Info alert:</span>
+        The conversion of this feed from Twitter to Mastodon is underway.
+      </p>
+      <div class="pf-c-alert__description">
+        <p>
+          Digital civil rights and sovereignty are important to a free society.
+          Twitter and Musk's conservatism are a threat to the very core of the
+          institutions that keep humanity functioning, and that threat should be
+          taken seriously.
+          <a
+            href="https://www.europarl.europa.eu/RegData/etudes/BRIE/2020/651992/EPRS_BRI(2020)651992_EN.pdf"
+            target="_blank"
+            rel="noopener"
+            >Learn more.</a
+          >
+        </p>
+      </div>
+    </div>
+
     <ul
-      class="twitterfeed__tweets pf-l-flex pf-m-column pf-m-space-items-sm"
+      class="twitterfeed__tweets pf-l-flex pf-m-column pf-m-space-items-sm pf-u-mt-lg"
     ></ul>
 
     <a
