--- a/layouts/index.html
+++ b/layouts/index.html
@@ -73,7 +73,7 @@
         class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg pf-u-mt-lg pf-u-mt-0-on-lg pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center"
       >
         <a
-          href="https://twitter.com/{{ .Site.Data.person.twitter }}"
+          href="{{ .Site.Data.person.mastodon }}"
           target="_blank"
           class="pf-c-button pf-m-primary pf-u-mr-md"
         >
@@ -81,10 +81,10 @@
             <i class="fas fa-plus-circle" aria-hidden="true"></i>
           </span>
 
-          Follow on Twitter
+          Follow on Mastodon
         </a>
 
-        {{ partial "contactmenu" (dict "ID" "contact" "Instagram" .Site.Data.person.instagram "Mastodon" .Site.Data.person.mastodon "Matrix" .Site.Data.person.matrix "Signal" .Site.Data.person.signal "Phone" .Site.Data.person.phone "Mail" .Site.Data.person.mail ) }}
+        {{ partial "contactmenu" (dict "ID" "contact" "Instagram" .Site.Data.person.instagram "Twitter" .Site.Data.person.twitter "Matrix" .Site.Data.person.matrix "Signal" .Site.Data.person.signal "Phone" .Site.Data.person.phone "Mail" .Site.Data.person.mail ) }}
       </div>
     </div>
 
