--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -18,16 +18,13 @@
     </a>
   </div>
   <div class="pf-c-card__body twitterfeed">
-    <div
-      class="pf-c-alert pf-m-info pf-m-inline"
-      aria-label="Information alert"
-    >
+    <div class="pf-c-alert pf-m-warning pf-m-inline" aria-label="Warning alert">
       <div class="pf-c-alert__icon">
-        <i class="fas fa-fw fa-info-circle" aria-hidden="true"></i>
+        <i class="fas fa-fw fa-exclamation-triangle" aria-hidden="true"></i>
       </div>
       <p class="pf-c-alert__title">
-        <span class="pf-screen-reader">Info alert:</span>
-        The conversion of this feed from Twitter to Mastodon is underway.
+        <span class="pf-screen-reader">Warning alert:</span>
+        This feed originates from non-free social media.
       </p>
       <div class="pf-c-alert__description">
         <p>
@@ -36,7 +33,7 @@
           institutions that keep humanity functioning, and that threat should be
           taken seriously.
           <a
-            href="https://www.europarl.europa.eu/RegData/etudes/BRIE/2020/651992/EPRS_BRI(2020)651992_EN.pdf"
+            href="https://en.wikipedia.org/wiki/Network_sovereignty"
             target="_blank"
             rel="noopener"
             >Learn more.</a
