refactor: Drop top margin introduced for twt warning

--- a/layouts/partials/mastodonfeed.html
+++ b/layouts/partials/mastodonfeed.html
@@ -19,7 +19,7 @@
   </div>
   <div class="pf-c-card__body twitterfeed">
     <ul
-      class="twitterfeed__tweets pf-l-flex pf-m-column pf-m-space-items-sm pf-u-mt-lg"
+      class="twitterfeed__tweets pf-l-flex pf-m-column pf-m-space-items-sm"
     ></ul>
 
     <a
