fix: Prevent links from overflowing in Mastodon feed

--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -116,7 +116,7 @@
 
     const tweetBody = document.createElement("div");
     tweetBody.innerHTML = tweet.body;
-    tweetBody.classList.add("pf-u-py-sm")
+    tweetBody.classList.add("pf-u-py-sm", "pf-x-u-overflow-x-auto")
 
     content.appendChild(tweetBody);
 
