--- a/layouts/partials/mastodonfeed.html
+++ b/layouts/partials/mastodonfeed.html
@@ -95,7 +95,7 @@
 
     const tweetBody = document.createElement("div");
     tweetBody.innerHTML = tweet.body;
-    tweetBody.classList.add("pf-u-py-sm")
+    tweetBody.classList.add("pf-u-py-sm", "pf-x-u-overflow-x-auto")
 
     content.appendChild(tweetBody);
 
