--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -37,6 +37,12 @@
     />
   </head>
   <body>
+    {{ if .Site.Params.Meta.Snowfall }}
+      {{ $built := resources.Get "js/snowflakes.js" | js.Build (dict "minify" true "target" "es2015") | fingerprint }}
+      <script src="{{ $built.Permalink }}"></script>
+    {{ end }}
+
+
     <div class="pf-c-page pf-c-page--background">
       <a class="pf-c-skip-to-content pf-c-button pf-m-primary" href="#main"
         >Skip to content</a
