--- a/layouts/partials/mastodonfeed.html
+++ b/layouts/partials/mastodonfeed.html
@@ -99,17 +99,24 @@
 
     content.appendChild(tweetBody);
 
-    if (tweet.images.length > 0) {
+    if (tweet.media.length > 0) {
       const images = document.createElement("div");
       images.classList.add("pf-l-gallery", "pf-m-gutter", "pf-u-my-sm")
 
-      tweet.images.forEach((image) => {
+      tweet.media.forEach((media) => {
         const el = document.createElement("div");
         el.classList.add("pf-l-gallery__item")
 
-        const attachment = document.createElement("img");
-        attachment.src = image.url;
-        attachment.alt = image.altText;
+        let attachment;
+        if (media.isVideo) {
+          attachment = document.createElement("video");
+          attachment.controls = true;
+        } else {
+          attachment = document.createElement("img");
+          attachment.alt = media.altText;
+        }
+
+        attachment.src = media.url;
         attachment.classList.add("pf-u-w-100")
 
         el.appendChild(attachment);
