--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,12 +7,14 @@
         href="{{ .Site.Params.Meta.Source }}"
         target="_blank"
         rel="noopener"
-        class="pf-x-m-no-highlight--dark pf-x-u-text-shadow-sm"
+        class="pf-x-m-no-highlight--dark pf-x-u-text-shadow-sm pf-x-u-text--freestanding"
         >© {{ now.Year }} {{ .Site.Params.Meta.Author }}</a
       >
     </div>
     <div class="pf-l-flex__item">
-      <a href="/imprint" class="pf-x-m-no-highlight--dark pf-x-u-text-shadow-sm"
+      <a
+        href="/imprint"
+        class="pf-x-m-no-highlight--dark pf-x-u-text-shadow-sm pf-x-u-text--freestanding"
         >Imprint</a
       >
     </div>
