--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
           href="{{ .Site.Data.person.cv }}"
           target="_blank"
           rel="noopener"
-          class="pf-c-button pf-c-button--header pf-x-u-text-shadow-sm pf-m-plain pf-u-ml-sm {{ if .Site.Params.meta.streaming }}
+          class="pf-c-button pf-c-button--header pf-x-u-text-shadow-sm pf-x-u-text--freestanding pf-m-plain pf-u-ml-sm {{ if .Site.Params.meta.streaming }}
             pf-u-mr-md
           {{ end }}"
         >
@@ -39,20 +39,22 @@
     tabindex="-1"
     id="main"
   >
-    <div class="pf-l-grid pf-m-gutter pf-u-p-xl pf-x-person__header">
+    <div class="pf-l-grid pf-m-gutter pf-u-p-xl pf-u-pt-0 pf-u-pt-xl-on-xl pf-x-person__header">
       <div
         class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg pf-u-display-flex pf-u-flex-direction-column pf-u-align-items-center pf-u-justify-content-center"
       >
         <h1
-          class="pf-u-font-size-xl pf-u-font-weight-bold pf-u-mb-xs pf-x-u-text-shadow-sm"
+          class="pf-u-font-size-xl pf-u-font-weight-bold pf-u-mb-xs pf-x-u-text-shadow-sm pf-x-u-text--freestanding"
         >
           {{ .Site.Data.person.name }}
         </h1>
-        <p class="pf-x-u-text-shadow-sm">{{ .Site.Data.person.description }}</p>
+        <p class="pf-x-u-text-shadow-sm pf-x-u-text--freestanding">
+          {{ .Site.Data.person.description }}
+        </p>
       </div>
 
       <figure
-        class="pf-l-grid__item pf-m-12-col pf-m-2-col-on-lg pf-u-display-flex pf-u-flex-direction-column pf-u-align-items-center pf-u-justify-content-center"
+        class="pf-l-grid__item pf-m-12-col pf-m-2-col-on-lg pf-u-display-flex pf-u-flex-direction-column pf-u-align-items-center pf-u-justify-content-center pf-u-p-lg pf-u-p-0-on-lg"
       >
         <figcaption class="pf-x-c-avatar__figcaption">
           <div class="pf-c-chip">
@@ -166,14 +168,14 @@
           <div
             class="pf-c-card__title pf-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-u-pt-0 pf-u-pb-0 pf-u-px-0"
           >
-            <h2 class="pf-x-u-text-shadow-sm">Projects</h2>
+            <h2 class="pf-x-u-text-shadow-sm pf-x-u-text--freestanding">Projects</h2>
           </div>
           <div class="pf-c-card__body pf-u-px-0 pf-u-pb-0">
             <ul>
               {{ range .Site.Data.projects_gen }}
                 <li>
                   <h3
-                    class="pf-u-font-size-xl pf-u-my-md pf-x-u-text-shadow-sm"
+                    class="pf-u-font-size-xl pf-u-my-md pf-x-u-text-shadow-sm pf-x-u-text--freestanding"
                   >
                     {{ .title }}
                   </h3>
