--- a/layouts/partials/contactmenu.html
+++ b/layouts/partials/contactmenu.html
@@ -1,6 +1,6 @@
 <div class="pf-c-dropdown pf-m-expanded">
   <button
-    class="pf-c-dropdown__toggle pf-x-u-text-shadow-sm"
+    class="pf-c-dropdown__toggle pf-x-u-text-shadow-sm pf-x-u-text--freestanding"
     id="{{ .ID }}-expanded-button"
     aria-expanded="false"
     type="button"
