--- a/layouts/index.html
+++ b/layouts/index.html
@@ -35,11 +35,15 @@
 
 {{ define "main" }}
   <main
-    class="pf-c-page__main pf-c-page__main--with-overlay pf-c-page__main--index pf-x-u-blur"
+    class="pf-c-page__main pf-c-page__main--with-overlay pf-c-page__main--index pf-x-u-blur  {{ if or .Site.Params.Meta.Fireworks .Site.Params.Meta.Snowfall }}
+      pf-c-page__main--with-effects
+    {{ end }}"
     tabindex="-1"
     id="main"
   >
-    <div class="pf-l-grid pf-m-gutter pf-u-p-xl pf-u-pt-0 pf-u-pt-xl-on-xl pf-x-person__header">
+    <div
+      class="pf-l-grid pf-m-gutter pf-u-p-xl pf-u-pt-0 pf-u-pt-xl-on-xl pf-x-person__header"
+    >
       <div
         class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg pf-u-display-flex pf-u-flex-direction-column pf-u-align-items-center pf-u-justify-content-center"
       >
@@ -168,7 +172,9 @@
           <div
             class="pf-c-card__title pf-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-u-pt-0 pf-u-pb-0 pf-u-px-0"
           >
-            <h2 class="pf-x-u-text-shadow-sm pf-x-u-text--freestanding">Projects</h2>
+            <h2 class="pf-x-u-text-shadow-sm pf-x-u-text--freestanding">
+              Projects
+            </h2>
           </div>
           <div class="pf-c-card__body pf-u-px-0 pf-u-pb-0">
             <ul>
