fix: Add a11y support to fireworks

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -465,7 +465,7 @@ $pf-global--BorderRadius--sm: 8px;
   z-index: 100 !important;
 }
 
-.snowflakes ~ .fireworks {
+.fireworks ~ .snowflakes {
   background: transparent !important;
 }
 
