--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -45,6 +45,8 @@
         style="width: 100%; height: 100%; position: fixed;"
         class="fireworks"
       ></fireworks-js>
+    {{ else if .Site.Params.Meta.Snowfall }}
+      <div class="fireworks"></div>
     {{ end }}
 
     {{ if .Site.Params.Meta.Snowfall }}
