--- a/layouts/index.html
+++ b/layouts/index.html
@@ -79,15 +79,15 @@
         class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg pf-u-mt-lg pf-u-mt-0-on-lg pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center"
       >
         <a
-          href="https://{{ index (split .Site.Data.person.mastodon "@") 2 }}/@{{ index (split .Site.Data.person.mastodon "@") 1 }}"
+          href="{{ .Site.Params.navigation.cta.link }}"
           target="_blank"
           class="pf-c-button pf-m-primary pf-u-mr-md"
         >
           <span class="pf-c-button__icon pf-m-start">
-            <i class="fas fa-plus-circle" aria-hidden="true"></i>
+            <i class="{{ .Site.Params.navigation.cta.icon }}" aria-hidden="true"></i>
           </span>
 
-          Follow on Mastodon
+          {{ .Site.Params.navigation.cta.title }}
         </a>
 
         {{ partial "contactmenu" (dict "ID" "contact" "Instagram" .Site.Data.person.instagram "Twitter" .Site.Data.person.twitter "Matrix" .Site.Data.person.matrix "Signal" .Site.Data.person.signal "Phone" .Site.Data.person.phone "Mail" .Site.Data.person.mail ) }}
