--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,7 +42,9 @@
     id="main"
   >
     <div
-      class="pf-l-grid pf-m-gutter pf-u-p-xl pf-u-pt-0 pf-u-pt-xl-on-xl pf-x-person__header"
+      class="pf-l-grid pf-m-gutter pf-u-p-xl pf-u-pt-0 pf-u-pt-xl-on-xl pf-x-person__header {{ if not .Site.Params.integrations.github.enabled }}
+        pf-x-person__header--standalone
+      {{ end }}"
     >
       <div
         class="pf-l-grid__item pf-m-12-col pf-m-5-col-on-lg pf-u-display-flex pf-u-flex-direction-column pf-u-align-items-center pf-u-justify-content-center"
@@ -97,9 +99,12 @@
       </div>
     </div>
 
-    <section class="pf-x-commitwrapper pf-u-mb-md" id="commit">
-      {{ partial "lastcommit" (dict "ID" "lastcommit" "Username" .Site.Data.person.github "BaseURL" .Site.BaseURL ) }}
-    </section>
+    {{ if .Site.Params.integrations.github.enabled }}
+      <section class="pf-x-commitwrapper pf-u-mb-md" id="commit">
+        {{ partial "lastcommit" (dict "ID" "lastcommit" "Username" .Site.Params.integrations.github.username "BaseURL" .Site.BaseURL ) }}
+      </section>
+    {{ end }}
+
 
     <div class="pf-l-grid pf-m-gutter pf-l-grid--max-width">
       <div class="pf-l-grid__item pf-m-12-col pf-m-7-col-on-lg">
