--- a/layouts/partials/mastodonfeed.html
+++ b/layouts/partials/mastodonfeed.html
@@ -24,7 +24,7 @@
 
     <a
       target="_blank"
-      class="twitterfeed__user__url pf-c-button pf-m-link pf-u-mt-lg"
+      class="twitterfeed__user__url pf-c-button pf-m-link"
     >
       <span class="pf-c-button__icon pf-m-start">
         <i class="fas fa-arrow-right" aria-hidden="true"></i> </span
@@ -129,7 +129,7 @@
 
 
     const statistics = document.createElement("div");
-    statistics.classList.add("pf-l-flex", "pf-m-justify-content-space-around", "pf-m-align-items-center", "pf-u-color-200")
+    statistics.classList.add("pf-l-flex", "pf-m-justify-content-space-around", "pf-m-align-items-center", "pf-u-color-200", "pf-u-mt-sm")
 
     const repliess = document.createElement("span");
     repliess.classList.add("pf-l-flex", "pf-m-align-items-center", "pf-m-space-items-sm")
