--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -37,7 +37,7 @@
     />
   </head>
   <body>
-    {{ if .Site.Params.Meta.Fireworks }}
+    {{ if .Site.Params.integrations.fireworks.enabled }}
       {{ $built := resources.Get "js/fireworks.js" | js.Build (dict "minify" true "target" "es2015") | fingerprint }}
       <script src="{{ $built.Permalink }}"></script>
 
@@ -45,11 +45,11 @@
         style="width: 100%; height: 100%; position: fixed;"
         class="fireworks"
       ></fireworks-js>
-    {{ else if .Site.Params.Meta.Snowfall }}
+    {{ else if .Site.Params.integrations.snowfall.enabled }}
       <div class="fireworks"></div>
     {{ end }}
 
-    {{ if .Site.Params.Meta.Snowfall }}
+    {{ if .Site.Params.integrations.snowfall.enabled }}
       {{ $built := resources.Get "js/snowflakes.js" | js.Build (dict "minify" true "target" "es2015") | fingerprint }}
       <script src="{{ $built.Permalink }}"></script>
     {{ end }}
@@ -120,7 +120,7 @@
 
       {{ block "main" . }}
         <main
-          class="pf-c-page__main pf-c-page__main--with-overlay pf-x-u-blur {{ if or .Site.Params.Meta.Fireworks .Site.Params.Meta.Snowfall }}
+          class="pf-c-page__main pf-c-page__main--with-overlay pf-x-u-blur {{ if or .Site.Params.integrations.fireworks.enabled .Site.Params.integrations.snowfall.enabled }}
             pf-c-page__main--with-effects
           {{ end }}"
           tabindex="-1"
