feat: Add background effect configuration session

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -477,7 +477,9 @@ $pf-global--BorderRadius--sm: 8px;
 
 .pf-c-page__main--with-effects {
   background: transparent !important;
-  backdrop-filter: none !important;
+  &--without-blur {
+    backdrop-filter: none !important;
+  }
 }
 
 .pf-u-ml-2xl--first-child {
