--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -37,7 +37,7 @@
     />
   </head>
   <body>
-    {{ if .Site.Params.integrations.fireworks.enabled }}
+    {{ if .Site.Params.effects.fireworks }}
       {{ $built := resources.Get "js/fireworks.js" | js.Build (dict "minify" true "target" "es2015") | fingerprint }}
       <script src="{{ $built.Permalink }}"></script>
 
@@ -45,11 +45,11 @@
         style="width: 100%; height: 100%; position: fixed;"
         class="fireworks"
       ></fireworks-js>
-    {{ else if .Site.Params.integrations.snowfall.enabled }}
+    {{ else if .Site.Params.effects.snowfall }}
       <div class="fireworks"></div>
     {{ end }}
 
-    {{ if .Site.Params.integrations.snowfall.enabled }}
+    {{ if .Site.Params.effects.snowfall }}
       {{ $built := resources.Get "js/snowflakes.js" | js.Build (dict "minify" true "target" "es2015") | fingerprint }}
       <script src="{{ $built.Permalink }}"></script>
     {{ end }}
@@ -120,8 +120,8 @@
 
       {{ block "main" . }}
         <main
-          class="pf-c-page__main pf-c-page__main--with-overlay pf-x-u-blur {{ if or .Site.Params.integrations.fireworks.enabled .Site.Params.integrations.snowfall.enabled }}
-            pf-c-page__main--with-effects
+          class="pf-c-page__main pf-c-page__main--with-overlay pf-x-u-blur {{ if or .Site.Params.effects.fireworks .Site.Params.effects.snowfall }}
+            pf-c-page__main--with-effects{{ if not .Site.Params.effects.blur }} pf-c-page__main--with-effects--without-blur{{ end }}
           {{ end }}"
           tabindex="-1"
           id="main"
